# DATTools

./: .gitignore  AGENTS.md  ALGORITHMS_PLAN.md  DESKTOP_RELEASE_GUIDE.md  LICENSE  README.md  TAURI_PLAN.md  WALLS_REUSE_PR_PLAN.md  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  tsconfig.test.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.husky/: pre-commit
scripts/: build_walls.ts  generate_desktop_icon.py  prepare-release.mjs  prepare.mjs  release-version-lib.mjs
src/: cli.ts  levelsetFiles.ts  webBuildTarget.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: board-canvas-presentation.test.ts  board-editor-status.test.ts  board-mirrors.test.ts  board-render-invalidation.test.ts  brush-preview.test.ts  cc1-cell-render-plan.test.ts  cc1-level-renderer.test.ts  cc1-secrets.test.ts  cc1-sprite-set.test.ts  cc1-tiles.test.ts  dat-3d-display.test.ts  dat-3d-levels.test.ts  dat-fixtures-roundtrip.test.ts  dat-fixtures-transform-group-laws.test.ts  dat-merge.test.ts  dat-transform-group-laws.test.ts  dat-transform-level.test.ts  editor-shortcuts.test.ts  generated-layout-storage.test.ts  generated-layouts.test.ts  github-releases.test.ts  level-editing.test.ts  levelset-file-name.test.ts  levelset-files.test.ts  lexys-labyrinth-export.test.ts  package-exports.test.ts  palette-sections.test.ts  persisted-app-state.test.ts  recent-set-storage.test.ts  release-version.test.ts  selection-border-hit.test.ts  sprite-atlas.test.ts  tauri-platform.test.ts  (+8 more)
(+75 files in other folders)
